fixed navar-overlapping with maps

--- a/app/assets/stylesheets/pages/_dog_index.scss
+++ b/app/assets/stylesheets/pages/_dog_index.scss
@@ -1,5 +1,7 @@
 .dog-index {
-  min-height: calc(100vh - 163.97px)
+  min-height: calc(100vh - 163.97px);
+  position: relative;
+  z-index: -1;
 }
 
 .cards {
